--- a/grs_client/src/main/resources/templates/grievances/manageGrievances.html
+++ b/grs_client/src/main/resources/templates/grievances/manageGrievances.html
@@ -1440,7 +1440,7 @@
 
     function loadUnceenCount() {
         $.ajax({
-            url: "/api/total/count/inbox",
+            url: "http://94.250.203.197:8088/grs_server/api/total/count/inbox",
             type: "get",
             data: "application/json",
             dataType: "json",
