--- a/grs_client/src/main/resources/templates/grievances/viewGrievancesDetails.html
+++ b/grs_client/src/main/resources/templates/grievances/viewGrievancesDetails.html
@@ -2289,7 +2289,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <div class="full-height-content-body">
-                                        <table class="table table-striped table-bordered"
+                  ,                       <table class="table table-striped table-bordered"
                                                id="tblGrievanceListOfCitizen">
                                             <thead>
                                             <tr>
