Fix File Upload Handling and Added DELETE in the Interceptor

--- a/grs_client/src/main/resources/templates/grievances/addGrievancesForOthers.html
+++ b/grs_client/src/main/resources/templates/grievances/addGrievancesForOthers.html
@@ -309,7 +309,7 @@
         <div class="row">
             <div class="form-body">
                 <div class="col-md-9 col-md-offset-3">
-                    <form id="fileupload" accept-charset="UTF-8" action="api/file/upload_new" method="POST"
+                    <form id="fileupload" accept-charset="UTF-8" action="/api/file/upload_new" method="POST"
                           enctype="multipart/form-data" class="">
                         <div th:replace="fileUpload :: fileUploadHtml">
                         </div>
