fixed organogram api and dashboard

--- a/grs_client/src/main/resources/templates/grievances/viewAppealGrievancesDetails.html
+++ b/grs_client/src/main/resources/templates/grievances/viewAppealGrievancesDetails.html
@@ -2939,7 +2939,7 @@
                 "check_callback": true,
                 'data': {
                     'url': function(node) {
-                        return node.id === '#' ?
+                        return node.id === '999' ?
                             url :
                             '/api/office/organogram/so';
                     },
@@ -2981,7 +2981,7 @@
                 "check_callback": true,
                 'data': {
                     'url': function(node) {
-                        return node.id === '#' ?
+                        return node.id === '999' ?
                             url :
                             '/api/office/organogram/so';
                     },
