SuperAdmin Repo Moved to Auth Service

--- a/grs_client/src/main/resources/templates/includes/superadmin_leftmenu.html
+++ b/grs_client/src/main/resources/templates/includes/superadmin_leftmenu.html
@@ -230,6 +230,12 @@
                             <span class="title" th:text="#{report.notification.setup}"></span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a th:href="@{superUserPasswordChange.do}" class="nav-link">
+                            <i class="fa fa-key"></i>
+                            <span class="title"> পাসওয়ার্ড পরিবর্তন </span>
+                        </a>
+                    </li>
                 </ul>
             </li>
         </ul>
