--- a/grs_client/src/main/resources/templates/management/superUserPasswordChange.html
+++ b/grs_client/src/main/resources/templates/management/superUserPasswordChange.html
@@ -5,8 +5,7 @@
     <div class="container" style="max-width: 600px; margin: 50px auto; background-color: #f9f9f9; padding: 30px; border-radius: 10px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);">
         <span style="text-align: center; font-size: 25px; color: #4a90e2;">Super Admin - এর পাসওয়ার্ড পরিবর্তন</span>
 
-        <form id="changePasswordForm" class="ajax-submit-form" method="post" th:action="@{/api/admin/change-password}">
-
+        <form id="changePasswordForm" class="ajax-submit-form">
             <!-- Old Password -->
             <div class="form-group" style="margin-bottom: 20px; margin-top: 10px">
                 <label for="oldPassword" style="font-weight: bold; color: #333;">বর্তমান পাসওয়ার্ড</label>
@@ -29,21 +28,21 @@
             </div>
 
             <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary"
-                    style="width: 100%; margin-top: 10px padding: 12px; background-color: #4a90e2; color: #fff; border: none; border-radius: 5px; font-size: 18px; font-weight: bold; cursor: pointer;">
+            <button type="button" id="submitPasswordChange" class="btn btn-primary"
+                    style="width: 100%; margin-top: 10px; padding: 12px; background-color: #4a90e2; color: #fff; border: none; border-radius: 5px; font-size: 18px; font-weight: bold; cursor: pointer;">
                 পাসওয়ার্ড সেট করুন
             </button>
-
         </form>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
     <script th:inline="javascript">
         $(document).ready(function () {
             var form = $("#changePasswordForm");
 
-            form.on("submit", function (event) {
-                event.preventDefault();
-                var url = form.attr("action");
+            $("#submitPasswordChange").on("click", function () {
+                var url = "/auth/superAdmin/passwordChange";
 
                 var dataObject = {
                     oldPassword: $('#oldPassword').val(),
@@ -68,13 +67,11 @@
                         if (response.success) {
                             alert("Password changed successfully!");
                             form.trigger("reset");
+                            window.location.href = "/viewOffice.do";
                         } else {
                             alert(response.message);
                         }
                     },
-                    error: function (xhr, status, error) {
-                        alert("Error: " + error);
-                    }
                 });
             });
         });
